--- a/.gitignore
+++ b/.gitignore
@@ -14,11 +14,5 @@ dist
 /.DS_Store
 /bin/
 /.project_old
-project/project
-project/target
-
-*.properties
-
-*.properties
-
-project/target/resolution-cache/default/rizeerjavaplay-build/scala_2.10/sbt_0.13/0.1-SNAPSHOT/resolved.xml.properties
+project/project/*
+project/target/*
